--- a/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
+++ b/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
@@ -281,13 +281,111 @@ We approach this evaluation through theoretical analysis (where feasible and inf
 These studies made all three of the errors described above; we singled them out not because they are particularly egregious (many other studies make these errors) but because they do an exceptional job of describing the species' life history, allowing us to infer the model they meant to construct.
 All three of these models had other minor errors, which we corrected (while retaining the three focal errors) to create "baseline" models. 
 We then constructed models that fixed one, two, or three of the focal errors to see how these errors affect the model projections and conclusions.
-A full description of these models, and all outputs, are in Appendix A.
+
+A matrix population model for lionfish was constructed by Morris et al. (2011) to investigate the potential approaches for controlling the invasive species. The model consist of three stages (larvae, juvenile, and adult), and time step of the model is one month. The original model was a post-breeding census model, but it did not include the survival of adults in the fertility rate. The average duration of the juvenile stage was assumed to be 12 months in the model. This meant they take 14 months for the first reproduction (one month in larvae stage, 12 months in juvenile stage, and one additional month in fertility rate) even though they start reproducing in 12 months. The authors used FAS model for calculating the transition rates for juveniles. We developed four stage-structured population models that gradually correct for some or all of these problems and one Leslie matrix (Table \@ref(tab:ModelList)). Along with the original models, we used the six models to calculate $\lambda$, stable stage distribution, reproductive value, sensitivity and elasticity of $\lambda$ to stage-specific survival rate and fecundity, damping ratio, and generation time (Appendix 1). 
+
+For American alligator populations, Dunham et al. 2014 developed two stage-structured matrix population models to compare the status of northern and southern populations. The original models consist of five stages (eggs, larvae, juvenile, subadults, and adults), and the time step of the model is one year. Similarly to the lionfish model, the alligator models are post-breeding census models, but the authors did not include the survival of adults in the fertility rate. The first stage was egg stage, but it only lasted for three months; therefore, there was clear inconsistency in the time steps among stages. Dunham et al. used AAS model to calculate transition rates for juvenile and subadult stages.  We developed two additional stage-structured models that corrects some or all of these problems and one Leslie matrix for each population (Table 1). The four population models for each population were used to calculate the same quantities that we calculated with the lionfish models (Appendix 1). 
+
+
+
+Table: (\#tab:ModelList) List of models and description of changes made to the original models.
+
+ ---------------------------------------------------------------------------------------------------------------------------------
+  Population                      Model   Description
+  ------------------------------- ------- -----------------------------------------------------------------------------------------
+  Lionfish                        L1      -   Original three-stage model in Morris et al., 2011
+                                          
+                                          
+
+                                  L2      -   Correction of juvenile duration
+                                          
+                                          -   Incorporation of adult survival in fertility rate
+                                          
+                                          
+
+                                  L3      -   All of the corrections in L2
+                                          
+                                          -   Incorporation of fertility rate of juvenile stage
+                                          
+                                          
+
+                                  L4      -   All of the corrections in L3
+                                          
+                                          -   Use of SAS model for calculating juvenile transition rate
+                                          
+                                          
+
+                                  L5      -   All of the corrections in L3
+                                          
+                                          -   Use of AAS model for calculating juvenile transition rate
+                                          
+                                          
+
+                                  L6      -   Leslie matrix
+                                          
+                                          
+
+  American Alligator (Northern)   A1      -   Original five-stage model in Dunham et al. 2014
+                                          
+                                          
+
+                                  A2      -   Reduction in the number of stage to four (hatchling, juvenile, subadult, and adult)
+                                          
+                                          -   Incorporation of survival rate into fertility rate of adult stage
+                                          
+                                          -   Addition of fertility rate to subadult stage
+                                          
+                                          
+
+                                  A3      -   All of the corrections made in A2
+                                          
+                                          -   Calculation of juvenile transition rates using AAS model
+                                          
+                                          
+
+                                  A4      -   Leslie matrix
+                                          
+                                          
+
+  American Alligator (Southern)   A5      -   Original five-stage model in Dunham et al. 2014
+                                          
+                                          
+
+                                  A6      -   Reduction in the number of stage to four (hatchling, juvenile, subadult, and adult)
+                                          
+                                          -   Incorporation of survival rate into fertility rate of adult stage
+                                          
+                                          -   Addition of fertility rate to subadult stage
+                                          
+                                          
+
+                                  A7      -   All of the corrections made in A6
+                                          
+                                          -   Calculation of juvenile transition rates using AAS model
+                                          
+                                          
+
+                                  A8      -   Leslie matrix
+                                          
+                                          
+  ---------------------------------------------------------------------------------------------------------------------------------
+
+
+
 
 ## Effects on asymptotic population growth rate ($\lambda$) 
+The original lionfish model (L1) had $\lambda$ of 1.125; this meant they grew by 12.5% each month (Figure S1). Even though they are invasive species and rapidly expanding. The population growth rate is unrealistically high. By reducing the average duration in juvenile stage (L2) and incorporating fertility rate on juvenile stage, the population growth rate increased further (L3). However, the use of SAS model to calculate the juvenile transition rate (L4) reduced $\lambda$ substantially. This is because for the duration of the juvenile stage (11 time steps on average), the survival rate is low. Incorporation of $\lambda$ in calculation of the transition rates (AAS models; L5) reduced $\lambda$ because $\lambda$>>1. This meant that there was an increase in number of individuals recruited into juvenile stage from larval stage; therefore, the actual age-distribution declines faster with age than the stable age distribution. The Leslie matrix (L6, which is expected to be least prone to the errors associated with the manipulations of parameters, and model L5 had the same $\lambda$.
+
+The original alligator models had $\lambda$ of 0.87 for the northern population and 1.02 for the northern population (Figure S8). In contrast to lionfish example, $\lambda$ was affected very little with the corrections. Changes in the fertility rate had very little effect because $\lambda$ was not sensitive to fertility rate. Changes in the transition rates for juvenile and subadult stages had little effect because, for the short durations in the stages (7 years in each stage and 3 years in each stage for northern and southern populations, respectively), they had relatively high survival rates (0.78 and 0.73 for juvenile and subadult stages of both populations). 
+
 
 ## Effects on sensitivity analysis of $\lambda$
+Similarly to the results on $\lambda$, sensitivity and elasticity of $\lambda$ to stage-specific survival and fecundity were affected more for lionfish than alligator. For lionfish population, the rank order of both sensitivity and elasticity among stages changed from L3 to L4 as we changed the way we calculate the transition rates (Figures S4 & S5). This implies that conservation strategy can be affected by the errors in developing a population matrix. 
+
+For lionfish models, changes in sensitivity and elasticity are less clear (Figures S11 & S12), but stable stage distribution (Figure S9) and reproductive values (Figure S10) are affected by the errors. These quantities are used for calculating sensitivity and elasticity of $\lambda$. For example, the original model substantially under-estimated the stable stage distribution and over-estimated the reproductive value of adults.
 
 ## Effects on life history statistics
+Damping ratio is a measure of how long transient dynamics lasts in a system after a perturbation, and generation time is a measure of time scale of populations. These quantities are expected to be affected by converting the age-structured into stage-structured models.  
 
 # Prevalence of construction errors in published MPMs
 ## Methods
@@ -450,6 +548,8 @@ Revisiting prior results
 
 - Inidividual studies
 - Syntheses
+
+
 
 # Acknowledgments {.unnumbered}
 This work was supported by [funding support to the compadrinos], a UCSB Faculty Senate grant to BEK, and [funding support to Masami & Jasmin]. We thank Rob Salguero-Gómez for feedback on the model evaluation protocol, and [list of compadrinos who actually worked on the project] for carrying out the model evaluations.
