--- a/docs/Protocol.Rmd
+++ b/docs/Protocol.Rmd
@@ -39,10 +39,10 @@ If you find that you cannot make sense of the protocol or are not sure how it ap
 Use the **Author,	Journal,	YearPublication,** and	**DOI.ISBN** fields to record the citation information exactly as it appears in the database. If the citation info in the database is incorrect (e.g., the doi has a typo or points to a different paper than is given by the rest of the citation information, or the model description and parameterization is actually in a different source than the one cited in the database), then use the appropriate **XXX.corr** field(s) to record the corrected information.
 
 ## `MatrixModified`
-For each study that actually shows the matrix population model, check that the matrix in COMADRE or COMPADRE is the the same.  Options: "Yes" | "No"
+For each study that actually shows the matrix population model, check that the matrix in COMADRE or COMPADRE is the the same. If there are *any* differences between the matrix as presented in the publication and the matrix contained in COMADRE, choose "Yes." If there is no matrix presented in the paper, such that the COMADRE matrix was probably recreated by the compadrino, chose "NA."  Options: "Yes" | "No" | "NA"
 
 ## `MatrixModifiedObs`
-If "Yes" in MatrixModified, above, record what has been changed (e.g. element f3,2 has been adjusted for pre-breeding census; element u1,2 has bee adjusted for uneven state duration).
+If "Yes" in MatrixModified, above, record what has been changed (e.g. element f3,2 has been adjusted for pre-breeding census; element u1,2 has bee adjusted for uneven state duration). If "NA" in MatrixModified, above, record the information in the paper that was a likely source for the COMADRE matrix (e.g., life table in Table 2; scalar pre-breeding census model in eq. 3 converted to 2x2 post-breeding census matrix in COMADRE).
 
 # Selecting a focal model from the study
 If a study reports mulitiple models, choose the one that is is most completetely described (i.e., allowing you to answer the most questions in the protocol), and indicate which entry in the COMADRE or COMPADRE database it refers to. Because the database does not currently have a unique ID associated with each model, this needs to be specified through one or more values of SpeciesAuthor,
