--- a/docs/Protocol.Rmd
+++ b/docs/Protocol.Rmd
@@ -36,7 +36,7 @@ If you find that you cannot make sense of the protocol or are not sure how it ap
 **Note:** If the model has only survival and growth, and no fecundities (i.e., the F matrix is all zero; e.g., @Buston2007), then enter `Not Applicable` for all columns assocated with sections 4-6.
 
 # Match between database and source
-Use the **Author,	Journal,	YearPublication,** and	**DOI.ISBN** fields to record the citation information exactly as it appears in the database. If the citation info in the database is incorrect (e.g., the doi has a typo or points to a different paper than is given by the rest of the citation information, or the model description and parameterization is actually in a different source than the one cited in the database), then use the appropriate **XXX.corr** field(s) to record the corrected information.
+Use the **Author,	Journal,	YearPublication,** and	**DOI.ISBN** fields to record the citation information exactly as it appears in the database. If the citation info in the database is incorrect (e.g., the doi has a typo or points to a different paper than is given by the rest of the citation information, or the model description and parameterization is actually in a different source than the one cited in the database), then use the appropriate **XXX.corr** field(s) to record the corrected information. If there are no changes, write "NoC" (for "No Correction") in the **XXX.corr** field(s).
 
 ## `MatrixModified`
 For each study that actually shows the matrix population model, check that the matrix in COMADRE or COMPADRE is the the same. If there are *any* differences between the matrix as presented in the publication and the matrix contained in COMADRE, choose "Yes." If there is no matrix presented in the paper, such that the COMADRE matrix was probably recreated by the compadrino, chose "No Matrix."  Options: "Yes" | "No" | "No Matrix"
