--- a/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
+++ b/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
@@ -228,8 +228,7 @@ Then the reproduction by newly maturing individuals is $F_{x_m} = P_{x_m} b_{x_m
 Indeed, this is a strong justification for the convention.
 However, this convention cannot be maintained when moving from age-structured to stage-structured models; since most animal MPMs are at least partially stage structured, we suspect that textbooks' failure to force a confrontation with this cognitive dissonance in the conceptually simpler age-structured models leaves practitioners unprepared to face it (or even recognize its necessity) in stage-structured models.
 
-The simplest stage-structured model has newborns, a nonreproductive juvenile class that spans multiple timesteps, and reproductive adults (Fig. 2).
-**Make SS lifecycle graphs**
+The simplest stage-structured model has newborns, a nonreproductive juvenile class that spans multiple timesteps, and reproductive adults (Fig. \@ref(fig:SScycles)).
 Within the juvenile class, some individuals remain juveniles in the next timestep (should they survive), whereas others mature into adults.
 If $\gamma_j$ is the fraction surviving individuals that mature ("grow") at the end of the timestep, then the Juvenile--Juvenile transition is given by $P_j = \sigma_j (1-\gamma_j)$ and the Juvenile--Adult transition is given by $G_j = \sigma_j \gamma_j$. 
 This is true for both pre-breeding and post-breeding census models.
@@ -237,6 +236,87 @@ However, for the latter, the individuals that made the Juvenile--Adult transitio
 Thus we need a reproductive transition leading out of the juvenile class---$F_j = G_j b_a$---which again seems to defy common sense.
 There is no way to finesse this in the way that has been done in age-structured models: if we classify individuals by their stage at their next birthday, so that the maturing individuals are called "adults," then we impose a constraint that individuals in the last year of the juvenile stage have the same survival as adults, which often isn't accurate.
 There are further obstacles to any attempted finesse in more complicated models in which individuals can "mature" into more than one subsequent class.
+
+```{r SScycles, echo=FALSE, warning=FALSE, message=FALSE, fig.cap='Four life-cycle diagrams that might (or might not) represent stage structured life table in Table 1. (a) A "naive" representation that associates each arrow with a vital rate. This fails to account for the fact that the reproductive transitions must span a timestep and therefor include a survival term. (b) A pre-breeding census representation, in which the youngest censused class is the juvenile stage and the adult birth rate is multiplied by newborn survival. (c) A post-breeding census representation, in which the adult burth rate is correctly multiplied by adult survival, but which fails to account for the fact that the maturing juveniles will have reproduced (as adults) just prior to the next census. (d) A correct post-breeding census representation.'}
+library(diagram)
+class_names <- c("Newborn", "Juvenile", "Adult")
+op <- par(mfrow = c(2,2), mar = c(0.1, 0.1, 1.6, 0.1))
+
+# Common control paramters for the diagrams
+# Set them once here so that they can be easily updated
+# Unfortunately plotmat() is not scale-independent!
+pos = 3
+self.shiftx = 0.
+self.shifty = -0.15
+self.lwd = 2
+self.lwd = 2
+self.cex = 1
+self.arrpos = -1.6
+shadow.size = 0.0
+relsize = 1
+mx = 0
+arr.type = "triangle"
+arr.length = 0.3
+
+# "Naive" life cycle diagram
+mat1 <- as.data.frame(
+  matrix(nrow = 3, ncol = 3, byrow = TRUE, data = 0)
+)
+mat1[[2,1]] <- "sigma[n]"
+mat1[[2,2]] <- "P[j]"
+mat1[[3,2]] <- "G[j]"
+mat1[[3,3]] <- "sigma[a]"
+mat1[[1,3]] <- "b[a]"
+curves <- matrix(0, 3, 3)
+curves[2,1] <- curves[3,2] <- 0.1
+curves[1,3] <- 0.5
+plotmat(mat1, name = class_names, pos = pos, curve = curves, 
+        self.shiftx = self.shiftx, self.shifty = self.shifty, 
+        self.lwd = self.lwd, self.cex = self.cex, 
+        self.arrpos = self.arrpos, shadow.size = shadow.size, 
+        relsize = relsize, mx = mx, arr.type = arr.type,  
+        arr.length = arr.length,
+        main = "\na) Naive representation (incorrect)")
+
+# Pre-breeding census 
+mat2 <- mat1[-1,-1]
+mat2[[1,2]] <- "b[a] * sigma[n]"
+curves2 <- curves[-1,-1]
+curves2[1,2] <- 0.5
+
+plotmat(mat2, name = class_names[-1], pos = pos-1, curve = curves2, 
+        self.shiftx = self.shiftx, self.shifty = self.shifty, 
+        self.lwd = self.lwd, self.cex = self.cex, 
+        self.arrpos = self.arrpos, shadow.size = shadow.size, 
+        relsize = relsize, mx = mx, arr.type = arr.type,  
+        arr.length = arr.length,
+        main = "\nb) Pre-breeding census representation (correct)")
+
+# Incorrect post-breeding census
+mat3 <- mat1
+mat3[[1,3]] <- "sigma[a] * b[a]"
+plotmat(mat3, name = class_names, pos = pos, curve = curves, 
+        self.shiftx = self.shiftx, self.shifty = self.shifty, 
+        self.lwd = self.lwd, self.cex = self.cex, 
+        self.arrpos = self.arrpos, shadow.size = shadow.size, 
+        relsize = relsize, mx = mx, arr.type = arr.type,  
+        arr.length = arr.length,
+        main = "c) Post-breeding census representation \n(incorrect)")
+
+# Correct post-breeding census
+mat4 <- mat3
+mat4[[1,2]] <- "sigma[j] * b[a]"
+curves[1,2] <- curves[1,3]
+plotmat(mat4, name = class_names, pos = pos, curve = curves, 
+        self.shiftx = self.shiftx, self.shifty = self.shifty, 
+        self.lwd = self.lwd, self.cex = self.cex, 
+        self.arrpos = self.arrpos, shadow.size = shadow.size, 
+        relsize = relsize, mx = mx, arr.type = arr.type,  
+        arr.length = arr.length,
+        main = "d) Post-breeding census representation \n(correct)")
+
+par(op)
+```
 
 In both stage- and age-structured models, failing to have the reproductive transition out of the last juvenile class in post-breeding census models will lead to a one-year delay in the age at first breeding, relative to the life history that the model is meant to represent.
 
