--- a/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
+++ b/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
@@ -305,7 +305,7 @@ plotmat(mat3, name = class_names, pos = pos, curve = curves,
 
 # Correct post-breeding census
 mat4 <- mat3
-mat4[[1,2]] <- "sigma[j] * b[a]"
+mat4[[1,2]] <- "G[j] * b[a]"
 curves[1,2] <- curves[1,3]
 plotmat(mat4, name = class_names, pos = pos, curve = curves, 
         self.shiftx = self.shiftx, self.shifty = self.shifty, 
